cicd/sonarqube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - host: sonarqube.demo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarqube
          servicePort: 9000
